--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="addresses">
         <p>
-          <strong>Your Address:</strong>
+          <strong>Your Public Key:</strong>
           <br />
           <span id="publicKey"></span>
         </p>
