--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
       <img id="side" src="img/sidelogo1.png" class="blockmove" />
       <div class="qrcode">
         <div id="publicQr"></div>
-        <p class="sidetext">YOUR PUBLIC KEY</p>
+        <p class="sub">YOUR PUBLIC KEY</p>
       </div>
       <div class="iconlogo">
         <img src="img/logo.png" />
       </div>
       <div class="qrcode">
         <div id="privateQr"></div>
-        <p class="sidetext">YOUR PRIVATE KEY</p>
+        <p class="sub">YOUR PRIVATE KEY</p>
       </div>
-      <div class="addresses">
+      <div class="addresses pb-0">
         <p>
           <strong>Your Public Key:</strong>
           <br />
